examples/errors/include-with-param-already-bound/a.temple
before
{% include "b.temple" with name = "x", name = "y" %}
after
